<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name" translatable="false">Kotlin Demo</string>

    <!--    <string name="characters_6_20">6-20个字符</string>-->
    <string name="cancel">取消</string>
    <string name="feedback">问题反馈</string>
    <string name="consumer_hotline">客服电话</string>
    <string name="official_website">官网</string>
    <string name="photo_album">相册</string>
    <string name="take_a_photo">拍照</string>
    <string name="news">消息</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>

    <!--    <string name="email_has_not">邮箱格式无效</string>-->

    <string name="loading">正在加载中...</string>
    <string name="one_moment_please">请稍等</string>

</resources>