<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/margin_standard_small"
        android:layout_marginRight="@dimen/margin_standard_small"
        android:layout_marginBottom="@dimen/margin_standard"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pop_top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAlbum"
                style="@style/tv_16_black"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/photo_album" />

            <View style="@style/line" />

            <TextView
                android:id="@+id/tvTake"
                style="@style/tv_16_black"
                android:layout_width="match_parent"
                android:gravity="center"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/take_a_photo" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvCancel"
            style="@style/tv_16_grey"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_pop_bottom"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/cancel" />

    </LinearLayout>
</FrameLayout>