<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorEFEFEF"
        android:orientation="vertical"
        android:paddingBottom="40dp">

        <RelativeLayout
            android:id="@+id/feedbackLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_standard">

            <TextView
                style="@style/tv_14_color_black"
                android:text="@string/feedback" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_short_message" />
        </RelativeLayout>

        <View
            style="@style/line"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" />

        <RelativeLayout
            android:id="@+id/consumerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_standard">

            <TextView
                style="@style/tv_14_color_black"
                android:text="@string/consumer_hotline" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_telephone" />
        </RelativeLayout>

        <View
            style="@style/line"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" />

        <RelativeLayout
            android:id="@+id/websiteLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_standard">

            <TextView
                style="@style/tv_14_color_black"
                android:text="@string/official_website" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_network" />
        </RelativeLayout>

        <View
            style="@style/line"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard" />

    </LinearLayout>
</FrameLayout>